--- a/chef/cookbooks/custom/JandJ/templates/default/settings.php.erb
+++ b/chef/cookbooks/custom/JandJ/templates/default/settings.php.erb
@@ -6,7 +6,7 @@
 // Example:
 // $acquia_settings_name = 'jnjbos/product1';
 
-if (!isset($acquia_settings_name)){
+if (isset($_ENV['AH_SITE_ENVIRONMENT']) && !isset($acquia_settings_name)){
   exit();
 }
 
