--- a/chef/cookbooks/custom/JandJ/templates/default/settings.local.php.erb
+++ b/chef/cookbooks/custom/JandJ/templates/default/settings.local.php.erb
@@ -18,3 +18,7 @@ $databases['default']['default'] = array(
   'prefix' => "<%= @database_prefix %>",
   'collation' => 'utf8_general_ci',
 );
+
+// Set the files directory 
+$conf['file_public_path'] = 'sites/<%= @site_dir %>/files';
+$conf['file_temporary_path'] = "/tmp";
