--- a/chef/cookbooks/custom/JandJ/templates/default/jjbos_dev_prepare.sh.erb
+++ b/chef/cookbooks/custom/JandJ/templates/default/jjbos_dev_prepare.sh.erb
@@ -7,4 +7,5 @@ drush vset preprocess_css 0
 drush vset preprocess_js 0
 drush uli --browser=0
 drush vset cache 0
+drush vset error_reporting 2
 drush cc all
