fixing help page

--- a/chef/cookbooks/core/vdd/templates/default/vdd_help.html.erb
+++ b/chef/cookbooks/core/vdd/templates/default/vdd_help.html.erb
@@ -67,7 +67,7 @@
       <li><a href="/phpmyadmin">phpMyAdmin</a></li>
       <li><a href="/phpinfo.php">phpinfo()</a></li>
       <li><a href="/webgrind">Webgrind</a></li>
-       <li><a href=":8983/solr/">solr</a></li>
+       <li><a href="http://<%= node["vm"]["ip"] %>:8983/solr/">solr</a></li>
     </ul>
 
     <h2 id="faq">FAQ</h2>
